--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-20" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box icon-box-yellow">
-              <div class="icon"><i class="bx bx-phone"></i></div>
+              <div class="icon"><i class="bx bx-mobile-alt"></i></div>
               <h4 class="title"><a href="">Mobile App Development</a></h4>
               <p class="description"> BHS Infotech keeps track with the technologies of application development for
                 android, iPad, iPhone. We design and build a significant iOS application for these platforms. Our deep
